prevent scrollbars from appearing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,4 +14,5 @@ body {
   padding: var(--app-padding);
   font-family: sans-serif;
   background-color: #272727;
+  overflow: hidden;
 }
